# A-Share-Alpha-Factor-Research

./: .env.example  .gitignore  README.md  pyproject.toml
report/: main.tex  reference_sources.json  references.bib
scripts/: backup_report_state.py  build_latex_reports.py  build_oos_comparison.py  build_report_assets.py  build_research_store.py  build_sample_diagnostics.py  build_universe_history.py  package_submission.py  render_chinese_report_pdf.py  render_english_report_pdf.py  render_english_report_pdf_reportlab.py  run_data_pipeline.py  run_enhanced_factor_research.py  run_enhanced_model_backtest.py  run_factor_fusion_grid.py  run_factor_pipeline.py  run_fixed_split_experiment.py  run_model_backtest.py  run_single_factor_research.py  run_walk_forward_experiment.py  select_enhanced_factors.py  select_final_factors.py
src/mfe5210_alpha/: __init__.py  config.py
tests/: test_config.py
tests/data/: test_baostock_client.py  test_build_research_store.py  test_download_daily.py  test_industry.py  test_universe_history.py
tests/experiments/: test_exposures.py  test_fixed_split.py  test_fusion_grid.py  test_walk_forward.py
tests/factors/: test_base.py  test_catalog.py  test_factor_functions.py
tests/model/: test_backtest.py  test_diagnostics.py  test_dynamic.py  test_fusion.py  test_optimizer.py
tests/report/: test_appendices.py  test_assets.py  test_backup.py  test_latex.py  test_packaging.py  test_references.py
tests/research/: test_correlation.py  test_dynamic_admission.py  test_neutralization.py  test_oos_selection.py  test_robust_selection.py  (+1 more)
(+59 files in other folders)
