[project]
name = "mfe5210-alpha"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "jqdatasdk>=1.9.7",
  "pandas>=2.2.3",
  "numpy>=2.1.3",
  "pyarrow>=18.1.0",
  "scipy>=1.14.1",
  "statsmodels>=0.14.4",
  "matplotlib>=3.9.2",
  "seaborn>=0.13.2",
  "openpyxl>=3.1.5",
  "python-dotenv>=1.0.1",
]

[build-system]
requires = ["setuptools>=75.6.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
